tests/negative/test_raw_elem_raw_asgn.orb
fnc main () () {
    eval (sym (a \()));
    = ([] \(,a) 0) \();
};